# panelkit

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROMPTS.md  README.md  debug_run.sh  run_panelkit.sh  run_sdl_test.sh  run_with_logs.sh  sdl_minimal.rs
panelkit_sdl/: .gitignore  ARCHITECTURE.md  CHECKPOINT_PHASE5_COMPLETE.md  CHECKPOINT_WIDGET_SYSTEM.md  CMakeLists.txt  DESIGN.md  Dockerfile.cross  Dockerfile.target  ERROR_INJECTION_PLAN.md  LEGACY_UI.md  MIGRATION_PLAN.md  Makefile  OUTLINE_PHASE4.md  PHASE1.md  PROGRESS.md  README.md  TECH_DEBT.md  TESTING_TODO.md  WIDGET_EVENT_ISSUES.md  WIDGET_SYSTEM.md  advanced_config.yaml  arm64-toolchain.cmake  build_cross.sh  config.yaml  error_refactor_tracking.md  minimal_config.yaml  test_config.yaml
panelkit_sdl/config/: config.example.yaml  zlog.conf
panelkit_sdl/deploy/: Makefile  README.md  panelkit.service
panelkit_sdl/docs/: API.md  API_ARCHITECTURE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  DISPLAY.md  ERROR_HANDLING.md  EVENTS.md  INPUT.md  LOGGING.md  README.md  WIDGETS.md
panelkit_sdl/docs/personal/: AGENT.md  FEATURE_TODO.md  LEGACY_TODO.md  LEGACY_UI.md  REMINDERS_TODO.md
panelkit_sdl/docs/planning/: ERROR_UI_FUTURE.md  README.md  TEST_PLANNING.md  UI_STYLE_SYSTEM.md
panelkit_sdl/docs/tracking/: README.md  TECH_DEBT.md  TESTING_TRACKING.md  TODO_TEMPLATE.md  UI_FEATURES.md  UI_FEATURE_TRACKING.md  UI_STYLE_SYSTEM.md
panelkit_sdl/fonts/: README.md  embed_font.sh
panelkit_sdl/scripts/: build_host.sh  build_target.sh  debug_touch.sh  deploy.sh  deploy_and_debug.sh  install_zlog.sh  test_touch_debug.sh
panelkit_sdl/src/: api_functions.c  app.c  app.c.original  embedded_font.h  log.c  test_event_button.c  test_page_system.c  test_widget_system.c
panelkit_sdl/src/api/: api_client.c  api_client.h  api_manager.c  api_manager.h  api_parsers.c  api_parsers.h
panelkit_sdl/src/config/: config_defaults.c  config_defaults.h  config_integration_example.h  config_manager.c  config_manager.h  config_parser.c  config_parser.h  config_schema.h  config_utils.c  config_utils.h
panelkit_sdl/src/core/: CMakeLists.txt  build_info.c  build_info.h  error.c  error.h  error_logger.c  error_logger.h  logger.c  logger.h  memory_patterns.h  sdl_includes.h
panelkit_sdl/src/display/: CMakeLists.txt  backend_sdl.c  backend_sdl_drm.c  display_backend.c  display_backend.h
panelkit_sdl/src/events/: event_system.c  event_system.h  event_system_typed.h  event_types.h
panelkit_sdl/src/input/: CMakeLists.txt  README.md  input_debug.c  input_debug.h  input_handler.c  input_handler.h  input_source_evdev.c  input_source_mock.c  input_source_sdl.c
panelkit_sdl/src/json/: jsmn.c  json_parser.c  json_parser.h
panelkit_sdl/src/state/: state_event_bridge.c  state_event_bridge.h  state_store.c  state_store.h
panelkit_sdl/src/ui/: debug_overlay.c  debug_overlay.h  error_notification.c  error_notification.h  event_button_poc.c  event_button_poc.h  gestures.c  gestures.h  page_manager.c  page_manager.h  page_widget.c  page_widget.h  pages.c  pages.h  rendering.c  rendering.h  ui_init.c  ui_init.h  widget.c  widget.h  widget_factory.c  widget_factory.h  widget_integration.c  widget_integration.h  widget_integration_core.c  widget_integration_events.c  widget_integration_internal.h  widget_integration_state.c  widget_integration_widgets.c  widget_manager.c  widget_manager.h
panelkit_sdl/src/ui/layout/: layout_absolute.c  layout_absolute.h  layout_core.c  layout_core.h  layout_flex.c  layout_flex.h  widget_layout_adapter.c  widget_layout_adapter.h
panelkit_sdl/src/ui/pages/: home_page.c  home_page.h  settings_page.c  settings_page.h
panelkit_sdl/src/ui/style/: color_utils.c  color_utils.h  font_manager.c  font_manager.h  style_constants.h  style_core.c  style_core.h  style_example.c  style_observer.c  style_observer.h  style_observer_example.c  style_system.c  style_system.h  style_templates.c  style_templates.h  style_validation.c  style_validation.h
panelkit_sdl/src/ui/widgets/: button_widget.c  button_widget.h  data_display_widget.c  data_display_widget.h  page_manager_widget.c  page_manager_widget.h  text_widget.c  text_widget.h  time_widget.c  time_widget.h  weather_widget.c  weather_widget.h
panelkit_sdl/src/yaml/: README.md  api.c  yaml_config.h
panelkit_sdl/test/: Makefile  README.md  test_logger.c  test_runner.c
panelkit_sdl/test/core/: test_logger.c
panelkit_sdl/test/input/: CMakeLists.txt  Dockerfile  TESTING_PLAN.md  build.sh  test_input_handler.c  test_integrated_touch.c  test_kmsdrm_touch.c  test_manual_inject.c  test_sdl_drm_touch.c  test_sdl_dummy.c  test_sdl_hints.c  test_sdl_touch.c  test_touch_minimal.c  test_touch_raw.c
panelkit_sdl/test/ui/layout/: test_absolute_layout.c  test_flex_layout.c  test_layout_core.c
panelkit_sdl/test/ui/style/: test_color_utils.c  test_font_manager.c  test_font_manager_simple.c  test_style_constants.c  test_style_core.c  test_style_observer.c  (+5 more)
panelkit_sdl/test/unity/: unity.c  unity.h
panelkit_sdl/test_drm/: Dockerfile  README.md  build.sh  deploy.sh  example_usage.c  sdl_drm_renderer.c  sdl_drm_renderer.h  test_drm_basic.c  test_drm_buffer.c  test_sdl_drm.c
slint_panelkit/: .gitignore  CMakeLists.txt  Cargo.toml  DESIGN_PLAN.md  Dockerfile  Dockerfile.build  IN_PROGRESS.md  LVGL.md  Makefile  README.md  SLINT_TOOLS.md  build.rs  cleanup.sh  test_layouts.sh
slint_panelkit/clean_start/: .gitignore  CMakeLists.txt  api_functions.c  app.c  build.sh
slint_panelkit/cmake/: arm64-toolchain.cmake  lvgl.cmake  sdl2.cmake
slint_panelkit/deploy/: Makefile.target  slint_panelkit.service
slint_panelkit/include/: lv_conf.h  lv_conf_kconfig.h  platform.h  ui_elements.h
slint_panelkit/scripts/: fix_docker_build.sh  fix_lockfile.sh
slint_panelkit/src/: config.rs  main.c  main.rs  platform.c  platform.rs  state.rs  ui.rs  ui_elements.c
slint_panelkit/src/platform/: mod.rs
slint_panelkit/src/utils/: config.rs  logging.rs
slint_panelkit/ui/: main.slint
slint_panelkit/ui/components/: button.slint  scroll_view.slint
(+69 files in other folders)
