[package]
name = "panelkit"
version = "0.1.0"
edition = "2021"
authors = ["Maintainer <maintainer@example.com>"]
description = "A compact, always-on graphical UI for embedded Linux environments"
repository = ""
license = "MIT"

[dependencies]
# Core dependencies
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.32", features = ["full"] }
bincode = "1.3"

# Communication
crossbeam-channel = "0.5"

# UI and Graphics - optional but loaded at runtime if available
sdl2 = { version = "0.35", features = ["ttf"], optional = true }

# For debug logging
once_cell = "1.18"

# Async helpers
futures = "0.3"

# Dependencies below this line are historical and can likely be removed in the future
# when a thorough dependency audit is performed

# These will be added back in a later phase
# [dependencies.redb]
# version = "1.0"
# optional = true

# Features are preserved for backward compatibility with existing build scripts,
# but not used internally anymore
[features]
default = ["with-sdl2"]
host = ["with-sdl2"]
embedded = []
with-sdl2 = ["sdl2"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true