[package]
name = "slint_panelkit"
version = "0.1.0"
edition = "2021"

[features]
default = ["slint/renderer-software", "slint/backend-winit", "slint/compat-1-2"]
embedded = ["slint/renderer-software", "slint/backend-linuxkms-noseat", "slint/compat-1-2"]

[build-dependencies]
slint-build = "1.11.0"

[[bin]]
name = "slint_panelkit"
path = "src/main.rs"

[dependencies]
slint = { version = "1.11.0", default-features = false }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
simple_logger = { version = "4.2.0", default-features = false, features = ["colors"] }
thiserror = "1.0"
rand = "0.8"
chrono = "0.4.38"
libc = "0.2"
once_cell = "1.19.0"

# Optimize for embedded
[profile.release]
opt-level = 'z'     
lto = "fat"         
codegen-units = 1   
strip = true        
panic = "abort"     